--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -212,7 +212,7 @@ h4
 
 .flat-form
   form
-    input
+    input, textarea
       border-radius: 0px
       font-size: 16px
       line-height: 20px
