--- a/app/views/user_profiles/edit.html.haml
+++ b/app/views/user_profiles/edit.html.haml
@@ -1,13 +1,13 @@
 .container
   .row
-    .span6
+    .span6.flat-form
       %h2 Edit Profile
       = form_for @user, url: user_profile_path(@user), method: :put do |f|
         .upload-wrapper
           = image_tag '/assets/missing.png', class: "upload-photo-preview"
           = link_to '+', '#', class: 'profile-photo-btn'
           %p= f.hidden_field :image_id, class: 'input-block-level upload-photo-field'
-        %div
+        %div.section
           = f.label :name
           = f.text_field :name, class: 'input-block-level'
         %div
