--- a/app/views/admin/activities/_form.html.haml
+++ b/app/views/admin/activities/_form.html.haml
@@ -8,8 +8,8 @@
 .well
   %h1(style="color: red;") Wait Just A Second There, Buddy
   %h3
-    You can still edit the recipe here, but if at all possible please use
-    =link_to "front-end edit mode", activity_path(@activity)
+    You can still create or edit the recipe here, but if at all possible please use
+    =link_to "front-end edit mode", @activity.id ? activity_path(@activity) : '/activities/new'
     instead. Grab Michael if you need any assistance or find bugs.
 
 / The Update Warning class will prompt the user to save the recipe before leaving the page
