[activities] swapped out the horizontal-scroller with the horizontal-carousel, updated styling

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -932,8 +932,8 @@ h4
   margin: 5px 2px
   border-radius: 50%
   background-image: none
-  background: $orange
-  color: white
+  background: $white-opaque
+  color: $orange
   font-size: 20px
   text-shadow: none
   text-align: center
