--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -114,11 +114,22 @@
         .span12
           %h3 Techniques
           #technique-carousel
-            = render 'shared/horizontal_scroller', items: @techniques
+            .horizontal-slider{data: {direction: 'right'}}
+              .horizontal-slider-wrap
+                - @techniques.each do |technique|
+                  = render 'shared/media_box', size: 'medium', url: technique, title: technique.title, image: technique.featured_image_id
+              %div{class: "horizontal-slider-btn-right btn btn-circle"}
+                %i{class: "icon-chevron-right"}
+              %div{class: "horizontal-slider-shadow-overlay-right"}
           %h3 Recipes
           #related-carousel
-            = render 'shared/horizontal_scroller', items: @recipes
-
+            .horizontal-slider{data: {direction: 'right'}}
+              .horizontal-slider-wrap
+                - @recipes.each do |recipe|
+                  = render 'shared/media_box', size: 'medium', url: recipe, title: recipe.title, image: recipe.featured_image_id
+              %div{class: "horizontal-slider-btn-right btn btn-circle"}
+                %i{class: "icon-chevron-right"}
+              %div{class: "horizontal-slider-shadow-overlay-right"}
     - if ! ENV["CS_NO_DISQUS"]
       .row(ng-hide="editMode")
         .span12
