[presskit] fix link

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -31,7 +31,7 @@
                 %li 
                   Press inquiries:
                   = mail_to 'press@chefsteps.com'
-                %li= link_to 'Press Kit', 'http://chefsteps.com/pages/press-kit'
+                %li= link_to 'Press Kit', 'http://chefsteps.com/pages/presskit'
 
             .span2
               %h3 Other Stuff
