--- a/app/views/user_profiles/edit.html.haml
+++ b/app/views/user_profiles/edit.html.haml
@@ -1,3 +1,10 @@
+.container-fluid.profile-cover{style: "background-image: url('#{s3_image_url(Setting.footer_image)}')"}
+  .row-fluid
+    .container
+      .row
+        .span12
+          %h1= @user.name
+
 .container
   .row
     .span6.flat-form
