--- a/app/assets/stylesheets/profiles.css.sass
+++ b/app/assets/stylesheets/profiles.css.sass
@@ -32,6 +32,18 @@
     text-decoration: none
     color: $orange
 
+.profile-edit
+  .profile-edit-image
+    width: 200px
+    height: 200px
+    background: $offwhite
+    border: 2px solid $orange
+    @include radius(100px)
+    @include boxsizing
+    .profile-photo-btn
+      margin-left: -30px
+      top: 75px
+
 @media (max-width: 1200px)
   .profile-cover
     .profile-image
