--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,7 +17,11 @@
 
     = auto_discovery_link_tag :atom, feed_path
     = auto_discovery_link_tag :rss, feed_path
-    %link{href: "/favicon.ico", rel: "shortcut icon"}
+    - if Rails.env.development?
+      %link{href: "/favicon-dev.png"}
+    - else
+      %link{href: "/favicon.ico", rel: "shortcut icon"}
+
     %link{href: "http://fonts.googleapis.com/css?family=Raleway:200,400,500,600,700", rel: "stylesheet", type: "text/css"}
     %link{href: "//netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css", rel: "stylesheet", type: "text/css"}
     %meta{:name => "google-translate-customization", :content => "d64492c5d22d7921-60170f9c9b7267c6-g7179c5f7a7e64573-d"}
@@ -29,7 +33,7 @@
     = render 'layouts/mixpanel'
     = javascript_include_tag 'application_head'
 
-  %body{@body_tag_attributes || {:'ng-app' => "ChefStepsApp"}}
+  %body{@body_tag_attributes || {:'ng-app' => "ChefStepsApp"}, :class => Rails.env}
     = render 'layouts/navigation', external: false
 
     .container.alert-container
