--- a/app/views/recipe_gallery/index.html.haml
+++ b/app/views/recipe_gallery/index.html.haml
@@ -35,7 +35,7 @@
       /     = render 'shared/media_box_3', url: activity_path(recipe), title: recipe.title, image: recipe.featured_image, object: recipe
       / = paginate @recipes
 
-.container
+.container.gallery-wrapper
   .row
     .span12#gallery-count{:'gallery-count' => "#{@recipes_count}"}
       %div(ng-controller='GalleryController')
