--- a/app/views/techniques/index.html.haml
+++ b/app/views/techniques/index.html.haml
@@ -10,7 +10,7 @@
       /         = render 'shared/media_centered', media: technique, size: 'medium'
       / = paginate @techniques
 
-.container
+.container.gallery-wrapper
   .row
     .span12#gallery-count{:'gallery-count' => "#{@techniques_count}"}
       %div(ng-controller='GalleryController')
