--- a/app/views/activities/_main_activity_content.html.haml
+++ b/app/views/activities/_main_activity_content.html.haml
@@ -2,6 +2,7 @@
 
   = render 'metadata'
   = render 'hero_visual', activity: activity
+  = render 'layouts/social_buttons', media_object: activity
   = render 'description'
   = render 'main_ingredients'
   = render 'basic_edit_pair', model: "activity.yield", name: "Yield", add_text: "Add yield info...", itemprop: "recipeYield"
