--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -280,6 +280,9 @@ h4
   .media-centered
     margin-bottom: 20px
 
+.section-small
+  margin-top: 10px
+
 .section
   margin-top: 20px
 
@@ -985,6 +988,9 @@ h4
     text-decoration: none
     color: white
     cursor: pointer
+
+.btn-social
+  width: 40px
 
 /* Quiz button */
 .btn-next, .btn-prev
