--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -864,6 +864,7 @@ h4
 /* Buttons */
 
 .btn
+  @include raleway
   i
     line-height: 20px
 
@@ -895,6 +896,7 @@ h4
   &:hover
     background: gray
     color: white
+    text-shadow: none
     @include transition(all 100ms)
 
 .btn-secondary[disabled]
