--- a/app/views/activities/_top_buttons.html.haml
+++ b/app/views/activities/_top_buttons.html.haml
@@ -1,21 +1,11 @@
 %div(collapse="editMode")
   - if ! @minimal
-    .pull-left.display-inline-fix
-      - if @course
-        .btn-circle{data: {toggle: 'modal', target: '#syllabus-modal'}}
-          %i.icon-file-alt
-        - prev_activity = @course.prev_published_activity(@activity)
-        - next_activity = @course.next_published_activity(@activity)
-        - if prev_activity
-          = link_to course_activity_path(@course, prev_activity), class: 'btn-circle' do
-            %i.icon-chevron-left
-        - if next_activity
-          = link_to course_activity_path(@course, next_activity), class: 'btn-circle' do
-            %i.icon-chevron-right
-      .btn-circle#show-all
-        %i.icon-resize-full#show-all-icon
-      .btn-circle{onclick: 'window.print()'}
-        %i.icon-print
+    .pull-left
+      .btn.btn-secondary{onclick: 'window.print()'}
+        Print
+      .btn.btn-secondary#show-all
+        Show All
+        %i.icon-picture#show-all-icon
     -if admin_user_signed_in? && @include_edit_toolbar
       .pull-right(style="margin-left: 20px;")
 
