[timeline] styling updates

--- a/app/assets/stylesheets/timeline.css.sass
+++ b/app/assets/stylesheets/timeline.css.sass
@@ -63,8 +63,8 @@
       border-bottom: 1px solid gray
   .timeline-circle-text
     width: 100%
-    height: 10%
     margin-top: 5%
+    margin-bottom: 10%
 .timeline-circle[data-direction='right']
   padding-left: 20%
   .timeline-circle-img
@@ -84,8 +84,8 @@
       border-bottom: 1px solid gray
   .timeline-circle-text
     width: 100%
-    height: 10%
     margin-top: 5%
+    margin-bottom: 10%
 
 // TIMELINE TEXT ONLY //
 .timeline-text-only[data-direction='left']
