--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -124,6 +124,7 @@
 
 = render 'cancel_edit_modal'
 = render 'restore_autosave.html.haml'
+= render 'already_editing_modal.html.haml'
 
 -################################ PRELOADED JSON FOR SPEED ################################
 
