--- a/app/views/courses/_poutine_a.html.haml
+++ b/app/views/courses/_poutine_a.html.haml
@@ -7,7 +7,8 @@
       .video-container(ng-cloak=""){:itemscope => true, :itemprop => "video", :itemtype => "http://schema.org/VideoObject", :csenforceaspect => true}
         %iframe(ng-style="setHeight()" csenforceaspect){src: youtube_url('ywv2KIRCOJE')}
       .section
-        %p= course.description
+        :markdown
+          #{course.description}
       %h4.text-center
         %i.icon-comment-alt
         Comments or Questions?
@@ -15,7 +16,7 @@
      
     .span6
       .well
-        Enroll Now; we'll keep track of your course progress and you can earn badges and upload your creations on the way.
+        Enroll Now! We'll keep track of your course progress and you can earn badges and upload your creations on the way.
         = render 'course_enrollment_box'
       - if @course.users.count > 1 && @course.uploads.approved.count > 3
         .well   
@@ -29,66 +30,86 @@
               %i{class: "icon-chevron-right"}
             %div{class: "horizontal-slider-shadow-overlay-right"}
 
-#creative-kit.modal.hide.fade
-  .modal-header
-    %h3 Sous Vide Supreme Demi
-  .modal-body
-    = image_tag 'http://placehold.it/500x250/333333/dddddd&text'
-    %ul.section{style: "-webkit-column-count: 2"}
-      - Course::SPHERIFICATION_CREATIVE[:equipment].each do |equipment|
-        %li= equipment
-  .modal-footer.section
-    %a(class="btn btn-secondary" data-dismiss="modal" aria-hidden="true") Close
+%hr
 
-
-#enthusiast-kit.modal.hide.fade
-  .modal-header
-    %h3 Sous Vide Supreme
-  .modal-body
-    = image_tag 'http://placehold.it/500x250/333333/dddddd&text'
-    %ul.section{style: "-webkit-column-count: 2"}
-      - Course::SPHERIFICATION_ENTHUSIAST[:equipment].each do |equipment|
-        %li= equipment    
-  .modal-footer.section
-    %a(class="btn btn-secondary" data-dismiss="modal" aria-hidden="true") Close
+.container
+  .row.section
+    .span12
+      %h2 SousVide Supreme water bath, the ideal tool for this course
+      %p Many of the recipes in our poutine course, including the squeaky cheese curd, make use of a SousVide Supreme water bath. This helpful tool affords accurate temperature control essential for sous vide cooking, but useful in many other unexpected ways in the kitchen.
+      %p In this short course, you'll learn how to use salt water to find the perfect potatoes for incredibly crisp French fries prepared via a three-stage cooking technique. 
 
 %hr
 
-.container-fluid
-  .row-fluid
-    .container
-      .row.section
-        .span6.align-bottom#creative
-          = image_tag 'http://placehold.it/500x250/333333/dddddd&text'
-          %h3= "Sous Vide Supreme Demi"
-          .static-height
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-          .well.section
-            = buy_now(Course::SPHERIFICATION_CREATIVE[:variant_id], Course::SPHERIFICATION_CREATIVE[:price])
-
-        .span6.align-bottom#enthusiast
-          = image_tag 'http://placehold.it/500x250/333333/dddddd&text'
-          %h3="Sous Vide Supreme"
-          .static-height
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-          .well.section
-            = buy_now(Course::SPHERIFICATION_ENTHUSIAST[:variant_id], Course::SPHERIFICATION_ENTHUSIAST[:price])
+.container#enthusiast
+  .row.section
+    .span5.offset1
+      .annotated.annotated-enthusiast
+        = image_tag 'https://www.filepicker.io/api/file/lgyi1qx3RVyEKG3lxdRp'
+        .annotations
+          /- Course::SVS_DEMI[:equipment].each do |equipment|
+          /  .annotation
+          /    = equipment
+      .btn.btn-secondary.annotation-toggle.section.hide View Details
+    .span6
+      %h2 SousVide Supreme
+      = Course::SVS[:copy]
+      .well.section
+        = buy_now(Course::SVS[:variant_id], Course::SVS[:price])
 
 %hr
 
-.container-fluid
-  .row-fluid
-    .container
-      .row.section
-        %h2.text-orange Instructors
-      .row.section
-        .span2
-          = image_tag('chris-large.jpg', title: 'Chris Young', class: 'img-profile')
-        .span4
-          :markdown
-            #{bio_chris.copy.to_s}
-        .span2
-          = image_tag('grant-large.jpg', title: 'Chris Young', class: 'img-profile')
-        .span4
-          :markdown
-            #{bio_grant.copy.to_s}
+.container#creative
+  .row.section
+    .span5.offset1
+      .annotated.annotated-creative
+        = image_tag 'https://www.filepicker.io/api/file/XKjDWnY0So2bEaB9OdVx'
+        .annotations
+          /- Course::SPHERIFICATION_CREATIVE[:equipment].each do |equipment|
+          /  .annotation
+          /    = equipment
+      .btn.btn-secondary.annotation-toggle.section.hide View Details
+    .span6
+      %h2 SousVide Supreme Demi
+      = Course::SVS_DEMI[:copy]
+      .well.section
+        = buy_now(Course::SVS_DEMI[:variant_id], Course::SVS_DEMI[:price])
+
+%hr
+
+.container
+  .row.section
+    .span12
+      %h2 In this course
+      %p Squeaky cheese curds are a cult-food favorite, and their elusive squeak makes or breaks a classic poutine. We'll help you master the art of getting the squeak into these nuggets of fresh curd using an unstirred sous vide water bath and the cheddaring process.
+      %p Finally, for those who are interested in a modernist approach to melting cheese, this course reveals the secret of creating a smooth-flowing molten cheddar cheese sauce. This is invaluable knowledge for those interested in creating the ultimate cheese slice for summertime grilling or mac & and cheese and rich, silky-smooth fondue when the weather turns cold. 
+      %p At the end of this course, you'll have the opportunity to demonstrate proficiency with the techniques, and also certify your understanding of the science behind poutine. 
+
+
+  .row.section
+    .span4.offset2
+      =image_tag 'https://www.filepicker.io/api/file/A89KdgiLQeOtWvGvC4QE'
+      .text-center
+        %h4 Old School Poutine
+        
+    .span4
+      =image_tag 'https://www.filepicker.io/api/file/tQgN14vnRGeXzwsh5Yx8'
+      .text-center
+        %h4 New School Poutine
+
+/.container-fluid
+/  .row-fluid
+/    .container
+/      .row.section
+/        %h2.text-orange Instructors
+/      .row.section
+/        .span2
+/          = image_tag('chris-large.jpg', title: 'Chris Young', class: 'img-profile')
+/        .span4
+/          :markdown
+/            #{bio_chris.copy.to_s}
+/        .span2
+/          = image_tag('grant-large.jpg', title: 'Chris Young', class: 'img-profile')
+/        .span4
+/          :markdown
+/            #{bio_grant.copy.to_s}
