--- a/app/views/courses/_course_enrollment_box.html.haml
+++ b/app/views/courses/_course_enrollment_box.html.haml
@@ -3,16 +3,19 @@
     = where_user_left_off_in_course(@course, current_user, 'btn btn-primary btn-large')
   - else
     %h2 Enroll now for free
-    = form_tag enroll_course_path(@course) do
-      = submit_tag 'Enroll', class: 'btn btn-primary btn-large btn-block'
-    .section#browse-section
-      %p.text-center Or
-      .text-center
-        = link_to 'Browse the course', [@course, @course.first_published_activity]
+    We'll keep track of your course progress and you can earn badges and upload your creations as you learn.
+    .section 
+      = form_tag enroll_course_path(@course) do
+        = submit_tag 'Enroll', class: 'btn btn-primary btn-large btn-block'
+      .section#browse-section
+        %p.text-center Or
+        .text-center
+          = link_to 'Browse the course', [@course, @course.first_published_activity]
 
 - else
-  .flat-form.section
+  .flat-form
     %h2 Enroll for free now
+    We'll keep track of your course progress and you can earn badges and upload your creations as you learn.
     .section.hide#enroll-section
       = link_to 'Enroll', 'javascript:void(0);', class: 'btn btn-primary btn-large btn-block', id: 'enroll-section-btn'
     .section#browse-section
