--- a/app/views/courses/_poutine_a.html.haml
+++ b/app/views/courses/_poutine_a.html.haml
@@ -16,7 +16,6 @@
      
     .span6
       .well
-        Enroll Now! We'll keep track of your course progress and you can earn badges and upload your creations on the way.
         = render 'course_enrollment_box'
       - if @course.users.count > 1 && @course.uploads.approved.count > 3
         .well   
@@ -34,23 +33,18 @@
 
 .container
   .row.section
-    .span12
+    .span7
       %h2 SousVide Supreme water bath, the ideal tool for this course
-      %p Many of the recipes in our poutine course, including the squeaky cheese curd, make use of a SousVide Supreme water bath. This helpful tool affords accurate temperature control essential for sous vide cooking, but useful in many other unexpected ways in the kitchen.
-      %p In this short course, you'll learn how to use salt water to find the perfect potatoes for incredibly crisp French fries prepared via a three-stage cooking technique. 
+    .span5
+      %p.section Many of the recipes in our poutine course, including the squeaky cheese curd, make use of a SousVide Supreme water bath. This helpful tool affords accurate temperature control essential for sous vide cooking, but useful in many other unexpected ways in the kitchen.
+
 
 %hr
 
 .container#enthusiast
   .row.section
     .span5.offset1
-      .annotated.annotated-enthusiast
-        = image_tag 'https://www.filepicker.io/api/file/lgyi1qx3RVyEKG3lxdRp'
-        .annotations
-          /- Course::SVS_DEMI[:equipment].each do |equipment|
-          /  .annotation
-          /    = equipment
-      .btn.btn-secondary.annotation-toggle.section.hide View Details
+      = image_tag 'https://www.filepicker.io/api/file/lgyi1qx3RVyEKG3lxdRp'
     .span6
       %h2 SousVide Supreme
       = Course::SVS[:copy]
@@ -62,12 +56,7 @@
 .container#creative
   .row.section
     .span5.offset1
-      .annotated.annotated-creative
-        = image_tag 'https://www.filepicker.io/api/file/XKjDWnY0So2bEaB9OdVx'
-        .annotations
-          /- Course::SPHERIFICATION_CREATIVE[:equipment].each do |equipment|
-          /  .annotation
-          /    = equipment
+      = image_tag 'https://www.filepicker.io/api/file/XKjDWnY0So2bEaB9OdVx'
       .btn.btn-secondary.annotation-toggle.section.hide View Details
     .span6
       %h2 SousVide Supreme Demi
@@ -81,7 +70,10 @@
   .row.section
     .span12
       %h2 In this course
+    .span6
+      %p In this short course, you'll learn how to use salt water to find the perfect potatoes for incredibly crisp French fries prepared via a three-stage cooking technique.       
       %p Squeaky cheese curds are a cult-food favorite, and their elusive squeak makes or breaks a classic poutine. We'll help you master the art of getting the squeak into these nuggets of fresh curd using an unstirred sous vide water bath and the cheddaring process.
+    .span6
       %p Finally, for those who are interested in a modernist approach to melting cheese, this course reveals the secret of creating a smooth-flowing molten cheddar cheese sauce. This is invaluable knowledge for those interested in creating the ultimate cheese slice for summertime grilling or mac & and cheese and rich, silky-smooth fondue when the weather turns cold. 
       %p At the end of this course, you'll have the opportunity to demonstrate proficiency with the techniques, and also certify your understanding of the science behind poutine. 
 
@@ -97,19 +89,26 @@
       .text-center
         %h4 New School Poutine
 
-/.container-fluid
-/  .row-fluid
-/    .container
-/      .row.section
-/        %h2.text-orange Instructors
-/      .row.section
-/        .span2
-/          = image_tag('chris-large.jpg', title: 'Chris Young', class: 'img-profile')
-/        .span4
-/          :markdown
-/            #{bio_chris.copy.to_s}
-/        .span2
-/          = image_tag('grant-large.jpg', title: 'Chris Young', class: 'img-profile')
-/        .span4
-/          :markdown
-/            #{bio_grant.copy.to_s}
+%hr
+
+.container-fluid
+  .row-fluid
+    .container
+      .row.section
+        %h2.text-orange Instructors
+      .row.section
+        .span2
+          = image_tag('chris-large.jpg', title: 'Chris Young', class: 'img-rofile')
+        .span4
+          :markdown
+            #{bio_chris.copy.to_s}
+        .span2
+          = image_tag('grant-large.jpg', title: 'Chris Young', class: 'img-rofile')
+        .span4
+          :markdown
+            #{bio_grant.copy.to_s}
+%hr
+
+
+= render '/layouts/footer'
+
