--- a/app/views/courses/_course_enrollment_box.html.haml
+++ b/app/views/courses/_course_enrollment_box.html.haml
@@ -13,22 +13,22 @@
           = link_to 'Browse the course', [@course, @course.first_published_activity]
 
 - else
-  .flat-form
+  .flat-form.enrollment-wizard
     %h2 Enroll for free now
     We'll keep track of your course progress and you can earn badges and upload your creations as you learn.
-    .section.hide#enroll-section
-      = link_to 'Enroll', 'javascript:void(0);', class: 'btn btn-primary btn-large btn-block', id: 'enroll-section-btn'
-    .section#browse-section
+    .section.hide.enroll-section
+      = link_to 'Enroll', 'javascript:void(0);', class: 'btn btn-primary btn-large btn-block enroll-section-btn'
+    .section.browse-section
       %p.text-center Or
       .text-center
         = link_to 'Browse the course', [@course, @course.first_published_activity]
-    .section.hide#signup-or-signin-section
+    .section.hide.signup-or-signin-section
       .row-fluid
         .span6
-          = link_to 'Create an Account', 'javascript:void(0);', class: 'btn btn-primary btn-large btn-block', id: 'signup-and-enroll-btn'
+          = link_to 'Create an Account', 'javascript:void(0);', class: 'btn btn-primary btn-large btn-block signup-and-enroll-btn'
         .span6
-          = link_to 'Sign In', 'javascript:void(0);', class: 'btn btn-primary btn-large btn-block', id: 'signin-and-enroll-btn'
-    .section.hide#signup-and-enroll-section
+          = link_to 'Sign In', 'javascript:void(0);', class: 'btn btn-primary btn-large btn-block signin-and-enroll-btn'
+    .section.hide.signup-and-enroll-section
       = form_for @new_user, url: signup_and_enroll_path, method: :post, class: 'form-inline' do |f|
         = hidden_field_tag :course_id, @course.id
         = f.text_field :name, {placeholder: 'name', required: true, class: 'input-block-level'}
@@ -37,7 +37,7 @@
           = f.password_field :password, {placeholder: 'password', required: true, class: 'input-block-level'}
           = link_to 'Show', 'javascript:void(0);', class: 'btn btn-secondary', id: 'user-password-show'
         = f.submit 'Create Account and Enroll', class: 'btn btn-primary btn-large btn-block', id: 'subscribe-email'
-    .section.hide#signin-and-enroll-section
+    .section.hide.signin-and-enroll-section
       = form_tag signin_and_enroll_path, method: :post do
         = hidden_field_tag :course_id, @course.id
         = text_field_tag :email, nil, placeholder: 'email', class: 'input-block-level', required: true
