--- a/app/views/courses/_poutine_a.html.haml
+++ b/app/views/courses/_poutine_a.html.haml
@@ -33,18 +33,17 @@
 
 .container
   .row.section
-    .span7
-      %h2 SousVide Supreme water bath, the ideal tool for this course
-    .span5
+    .span8.offset2.text-center
+      %h2 The ideal tool for this course
       %p.section Many of the recipes in our poutine course, including the squeaky cheese curd, make use of a SousVide Supreme water bath. This helpful tool affords accurate temperature control essential for sous vide cooking, but useful in many other unexpected ways in the kitchen.
 
 %hr
 
 .container#enthusiast
   .row.section
-    .span5.offset1
+    .span5
       = image_tag 'https://www.filepicker.io/api/file/lgyi1qx3RVyEKG3lxdRp'
-    .span6
+    .span7
       %h2 SousVide Supreme
       = Course::SVS[:copy]
       .well.section
@@ -54,9 +53,9 @@
 
 .container#creative
   .row.section
-    .span5.offset1
+    .span5
       = image_tag 'https://www.filepicker.io/api/file/XKjDWnY0So2bEaB9OdVx'
-    .span6
+    .span7
       %h2 SousVide Supreme Demi
       = Course::SVS_DEMI[:copy]
       .well.section
@@ -67,7 +66,7 @@
 .container
   .row.section
     .span12
-      %h2 In this course
+      %h2.text-center What you'll learn
     .span6
       %p In this short course, you'll learn how to use salt water to find the perfect potatoes for incredibly crisp French fries prepared via a three-stage cooking technique.       
       %p Squeaky cheese curds are a cult-food favorite, and their elusive squeak makes or breaks a classic poutine. We'll help you master the art of getting the squeak into these nuggets of fresh curd using an unstirred sous vide water bath and the cheddaring process.
@@ -75,17 +74,14 @@
       %p Finally, for those who are interested in a modernist approach to melting cheese, this course reveals the secret of creating a smooth-flowing molten cheddar cheese sauce. This is invaluable knowledge for those interested in creating the ultimate cheese slice for summertime grilling or mac & and cheese and rich, silky-smooth fondue when the weather turns cold. 
       %p At the end of this course, you'll have the opportunity to demonstrate proficiency with the techniques, and also certify your understanding of the science behind poutine. 
 
-
-  .row.section
-    .span4.offset2
+    .span5.offset1.section
       =image_tag 'https://www.filepicker.io/api/file/A89KdgiLQeOtWvGvC4QE'
       .text-center
-        %h4 Old School Poutine
-        
-    .span4
+        %h5 Old School Poutine        
+    .span5.section
       =image_tag 'https://www.filepicker.io/api/file/tQgN14vnRGeXzwsh5Yx8'
       .text-center
-        %h4 New School Poutine
+        %h5 New School Poutine    
 
 %hr
 
