[poutine] added enroll to bottom of landing page

--- a/app/views/courses/_poutine_a.html.haml
+++ b/app/views/courses/_poutine_a.html.haml
@@ -85,6 +85,12 @@
 
 %hr
 
+.container
+  .span6.offset3
+    = render 'course_enrollment_box'
+
+%hr
+
 .container-fluid
   .row-fluid
     .container
