lots of bug fixes

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -1459,6 +1459,9 @@ csingredienteditpair
 .no-bold
   font-weight: normal
 
+.edit-meta-button
+  margin-bottom: 8px
+
 // See https://github.com/angular/angular.js/commit/11f712bc - these class
 // names have to change when we go to angular >= 1.1.5
 .fade-show-setup, .fade-hide-setup
