--- a/app/views/activities/_restore_autosave.html.haml
+++ b/app/views/activities/_restore_autosave.html.haml
@@ -1,4 +1,4 @@
-#restore-autosave-modal(ng-cloak modal="shouldShowRestoreAutosaveModal" close="shouldShowRestoreAutosaveModal = false")
+%div(ng-cloak modal="shouldShowRestoreAutosaveModal" close="shouldShowRestoreAutosaveModal = false")
   .modal-header
     %button.close(type='button' data-dismiss='shouldShowRestoreAutosaveModal = false')
       x
