--- a/app/views/client_views/_equipment_edit_pair.html.haml
+++ b/app/views/client_views/_equipment_edit_pair.html.haml
@@ -1,3 +1,7 @@
+-##################################################################################
+-# IMPORTANT IF YOU ARE EDITING THIS FILE SEE NOTE IN templates.js.erb !!!!!!
+-##################################################################################
+
 %csEditPair
   %csEditPairShow
     %div(ng-switch="" on="equipmentDisplayType(item)")
