--- a/app/views/activities/_metadata.html.haml
+++ b/app/views/activities/_metadata.html.haml
@@ -1,3 +1,9 @@
+.btn.btn-secondary.noprint.edit-meta-button(ng-show="editMode" ng-click="editMeta = ! editMeta")
+  %i.icon-edit
+  Details ...
+  %i.icon-chevron-up(ng-show="showHeroVisualEdit")
+  %i.icon-chevron-down(ng-show="! showHeroVisualEdit")
+
 %div(collapse="! (editMode && editMeta)")
   .meta-edit.well.noprint
     %h6 Activity Type
