--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -691,18 +691,17 @@ h4
 .swipe-indicators
   margin: 10px auto
 .swipe-indicator-btn
-  background: white
-  height: 20px
-  width: 20px
+  background: $light-gray
+  height: 15px
+  width: 15px
   display: inline-block
   text-align: center
   margin: 0 auto
   border-radius: 10px
-  border: 1px solid $orange
-  @include boxsizing
+  cursor: pointer
+
 .indicator-active
-  border: 2px solid $dark_orange
-  background: white
+  background: $dark-orange
 
 .swipe-wrap
   overflow: hidden
