[mixins] reverting the orange color change back to #e25f25

--- a/app/assets/stylesheets/_mixins.css.sass
+++ b/app/assets/stylesheets/_mixins.css.sass
@@ -47,8 +47,7 @@
   -webkit-font-smoothing: antialiased
 
 /* Colors */
-$orange: rgb(223, 75, 35)
-//$orange: #e25f25
+$orange: #e25f25
 //$orange: #DB7354
 $dark-orange: #D25029
 $darker-orange: #B84724
