[courses] add additional script field

--- a/app/views/courses/spherification.html.haml
+++ b/app/views/courses/spherification.html.haml
@@ -22,3 +22,6 @@
 - else
   :javascript
     mixpanel.track('Course Viewed', {'course title' : document.title, 'url' : window.location.pathname});
+
+- if course.additional_script
+  = course.additional_script.html_safe
