--- a/app/views/admin/courses/_form.html.haml
+++ b/app/views/admin/courses/_form.html.haml
@@ -7,6 +7,7 @@
     = f.input :title
     = f.input :description, label: "Description (Markdown or HTML)"
     = f.input :short_description, label: "Short description, for SERPs"
+    = f.input :additional_script, label: "Add any additional scripts"
     %li
       .filepicker-group
         = f.label :image_id, 'Image', class: 'label'
