--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -35,3 +35,5 @@
 
   = render 'layouts/disqus_comments', disqus_id: 'course-1', disqus_title:course.title, disqus_url: course_url
 
+- if course.additional_script
+  = course.additional_script.html_safe
