[homepage] made it so links will not underline on hover

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -256,6 +256,9 @@ h4
   &:hover
     color: black
 
+a:hover
+  text-decoration: none
+
 .madlib, .madlib input
   font-family: "Raleway", san-serif
   font-size: 30px
