--- a/app/views/activities/_assignments.html.haml
+++ b/app/views/activities/_assignments.html.haml
@@ -27,7 +27,7 @@
         %p= f.hidden_field :image_id, class: 'input-block-level upload-photo-field', required: true
     .span8
       %h4 Recipe Name
-      %p= f.text_field :recipe_name, class: 'input-block-level', required: true
+      %p= f.text_field :title, class: 'input-block-level', required: true
       %h4 Notes
       %p= f.text_area :notes, rows: 3, class: 'input-block-level', required: true
       = f.submit 'Upload', class: 'btn btn-primary btn-large'
@@ -38,22 +38,10 @@
   .horizontal-slider{data: {direction: 'right'}}
     .horizontal-slider-wrap
       - @course.uploads.each do |upload|
-        = render 'shared/media_box', size: 'medium', url: user_upload_path(upload.user, upload), title: upload.recipe_name, image: upload.image_id
+        = render 'shared/media_box', size: 'medium', url: user_upload_path(upload.user, upload), title: upload.title, image: upload.image_id
     %div{class: "horizontal-slider-btn-right btn btn-circle"}
       %i{class: "icon-chevron-right"}
     %div{class: "horizontal-slider-shadow-overlay-right"}
-
-/ - if current_user
-/   - ids = @activity.assignments.map(&:child_activity_id)
-/   - current_user.uploads.where(:uploads => {:activity_id => ids}).each do |upload|
-/     .row-fluid.section
-/       .span4
-/         = image_tag filepicker_gallery_image(upload.image_id)
-/       .span8
-/         %h4= upload.recipe_name
-/         %p= upload.notes
-/         = link_to 'Share', 'javascript:void(0);', class: 'btn btn-primary btn-large'
-/         = link_to 'Page', [current_user, upload]
 
 = render 'layouts/filepicker'
 
