--- a/app/views/courses/_spherification_e.html.haml
+++ b/app/views/courses/_spherification_e.html.haml
@@ -15,41 +15,7 @@
      
     .span6
       .well#enroll
-        - if current_user
-          - if current_user.course_ids.include?(@course.id)
-            = where_user_left_off_in_course(@course, current_user, 'btn btn-primary btn-large')
-          - else
-            %h2 Enroll now for free
-            = form_tag enroll_course_path(@course) do
-              = submit_tag 'Enroll', class: 'btn btn-primary btn-large btn-block'
-        
-        - else
-          .flat-form.section
-            %h2 Enroll for free now
-            .section.hide#enroll-section
-              = link_to 'Enroll', 'javascript:void(0);', class: 'btn btn-primary btn-large btn-block', id: 'enroll-section-btn'
-            .section.hide#signup-or-signin-section
-              .row-fluid
-                .span6
-                  = link_to 'Create an Account', 'javascript:void(0);', class: 'btn btn-primary btn-large btn-block', id: 'signup-and-enroll-btn'
-                .span6
-                  = link_to 'Sign In', 'javascript:void(0);', class: 'btn btn-primary btn-large btn-block', id: 'signin-and-enroll-btn'
-            .section.hide#signup-and-enroll-section
-              = form_for @new_user, url: signup_and_enroll_path, method: :post, class: 'form-inline' do |f|
-                = hidden_field_tag :course_id, @course.id
-                = f.text_field :name, {placeholder: 'name', required: true, class: 'input-block-level'}
-                = f.email_field :email, {placeholder: 'email', required: true, class: 'input-block-level'}
-                .input-block-level-password
-                  = f.password_field :password, {placeholder: 'password', required: true, class: 'input-block-level'}
-                  = link_to 'Show', 'javascript:void(0);', class: 'btn btn-secondary', id: 'user-password-show'
-                = f.submit 'Create Account and Enroll', class: 'btn btn-primary btn-large btn-block', id: 'subscribe-email'
-            .section.hide#signin-and-enroll-section
-              = form_tag signin_and_enroll_path, method: :post do
-                = hidden_field_tag :course_id, @course.id
-                = text_field_tag :email, nil, placeholder: 'email', class: 'input-block-level', required: true
-                = password_field_tag :password, nil, placeholder: 'password', class: 'input-block-level', required: true
-                = submit_tag 'Sign In and Enroll', class: 'btn btn-primary btn-large btn-block'
-
+        = render 'course_enrollment_box'
 
       - if @course.users.count > 1 && @course.uploads.approved.count > 3
         .well   
@@ -58,7 +24,7 @@
           .horizontal-slider{data: {direction: 'right'}}
             .horizontal-slider-wrap
               - @course.uploads.includes(:user).approved.order('created_at DESC').each do |upload|
-                = render 'shared/media_box', size: 'medium', url: user_upload_path(upload.user, upload), title: upload.recipe_name, image: upload.image_id
+                = render 'shared/media_box', size: 'medium', url: user_upload_path(upload.user, upload), title: upload.title, image: upload.image_id
             %div{class: "horizontal-slider-btn-right btn btn-circle"}
               %i{class: "icon-chevron-right"}
             %div{class: "horizontal-slider-shadow-overlay-right"}
