[uploads] working modal

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -884,6 +884,9 @@ h4
   &:disabled
     background: #696969
     color:  #d3d3d3
+  &:focus
+    background: $orange
+    outline: none
 
 .btn-secondary
   background: $offwhite
