--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -131,21 +131,24 @@
   .modal-header
     %h3= "Share your #{@activity.title} creation"
   .modal-body
-    = form_for @upload do |f|
-      = f.hidden_field :activity_id, value: @activity.id
-      .row-fluid
-        .span4
-          %h4 Upload a Photo
-          .upload-wrapper
-            = image_tag '/assets/missing.png', class: "upload-photo-preview"
-            = link_to '+', '#', class: 'upload-photo-btn'
-            %p= f.hidden_field :image_id, class: 'input-block-level upload-photo-field', required: true
-        .span8
-          %h4 Recipe Name
-          %p= f.text_field :title, class: 'input-block-level', required: true
-          %h4 Notes
-          %p= f.text_area :notes, rows: 3, class: 'input-block-level', required: true
-          = f.submit 'Upload', class: 'btn btn-primary btn-large'
+    .flat-form
+      = form_for @upload do |f|
+        = f.hidden_field :activity_id, value: @activity.id
+        .row-fluid
+          .span4
+            %h4 Upload a Photo
+            .upload-wrapper
+              = image_tag '/assets/missing.png', class: "upload-photo-preview"
+              = link_to '+', '#', class: 'upload-photo-btn'
+              %p= f.hidden_field :image_id, class: 'input-block-level upload-photo-field', required: true
+          .span8
+            %h4 Recipe Name
+            %p= f.text_field :title, class: 'input-block-level', required: true
+            %h4 Notes
+            %p= f.text_area :notes, rows: 3, class: 'input-block-level', required: true
+            = f.submit 'Upload', class: 'btn btn-primary btn-large pull-left'
+            %btn.btn.btn-large.btn-link{data: {dismiss: 'modal'}}
+              Cancel
 
 = render 'cancel_edit_modal'
 = render 'restore_autosave.html.haml'
