--- a/app/views/courses/_poutine_a.html.haml
+++ b/app/views/courses/_poutine_a.html.haml
@@ -35,7 +35,7 @@
   .row.section
     .span8.offset2.text-center
       %h2 The ideal tool for this course
-      %p.section Many of the recipes in our poutine course, including the squeaky cheese curd, make use of a SousVide Supreme water bath. This helpful tool affords accurate temperature control essential for sous vide cooking, but useful in many other unexpected ways in the kitchen.
+      %p.section Many of the recipes in our poutine course, including the squeaky cheese curd, make use of a SousVide Supreme water bath. This helpful tool affords accurate temperature control essential for sous vide cooking, but is useful in many other unexpected ways in the kitchen.
 
 %hr
 
@@ -43,7 +43,7 @@
   .row.section
     .span5
       = image_tag 'https://www.filepicker.io/api/file/lgyi1qx3RVyEKG3lxdRp'
-    .span7
+    .span6.offset1
       %h2 SousVide Supreme
       = Course::SVS[:copy]
       .well.section
@@ -55,7 +55,7 @@
   .row.section
     .span5
       = image_tag 'https://www.filepicker.io/api/file/XKjDWnY0So2bEaB9OdVx'
-    .span7
+    .span6.offset1
       %h2 SousVide Supreme Demi
       = Course::SVS_DEMI[:copy]
       .well.section
