[poutine] added padding to the product descriptions

--- a/app/views/courses/_poutine_a.html.haml
+++ b/app/views/courses/_poutine_a.html.haml
@@ -43,7 +43,7 @@
   .row.section
     .span5
       = image_tag 'https://www.filepicker.io/api/file/lgyi1qx3RVyEKG3lxdRp'
-    .span7
+    .span6.offset1
       %h2 SousVide Supreme
       = Course::SVS[:copy]
       .well.section
@@ -55,7 +55,7 @@
   .row.section
     .span5
       = image_tag 'https://www.filepicker.io/api/file/XKjDWnY0So2bEaB9OdVx'
-    .span7
+    .span6.offset1
       %h2 SousVide Supreme Demi
       = Course::SVS_DEMI[:copy]
       .well.section
