[poutine] updated text

--- a/app/views/courses/_poutine_a.html.haml
+++ b/app/views/courses/_poutine_a.html.haml
@@ -35,7 +35,7 @@
   .row.section
     .span8.offset2.text-center
       %h2 The ideal tool for this course
-      %p.section Many of the recipes in our poutine course, including the squeaky cheese curd, make use of a SousVide Supreme water bath. This helpful tool affords accurate temperature control essential for sous vide cooking, but useful in many other unexpected ways in the kitchen.
+      %p.section Many of the recipes in our poutine course, including the squeaky cheese curd, make use of a SousVide Supreme water bath. This helpful tool affords accurate temperature control essential for sous vide cooking, but is useful in many other unexpected ways in the kitchen.
 
 %hr
 
