--- a/app/views/activities/_description.html.haml
+++ b/app/views/activities/_description.html.haml
@@ -14,7 +14,7 @@
     %textarea(ng-model="activity.description" rows="5" placeholder="Add description...")
 
 
--if admin_user_signed_in?
+-if can? :update, Activity
   .section
     %csEditPair
 
