find unpublished recipes in gallery view

--- a/app/views/recipe_gallery/index.html.haml
+++ b/app/views/recipe_gallery/index.html.haml
@@ -36,9 +36,13 @@
       / = paginate @recipes
 
 .container.gallery-wrapper
+
   .row
+
     .span12#gallery-count{:'gallery-count' => "#{@recipes_count}"}
       %div(ng-controller='GalleryController')
+        %pre
+          {{gallery_index_params | json }}
         / .flat-form
         /   %form
         /     %input(ng-model='search' placeholder='Enter Name')
