--- a/app/views/shared/_gallery.html.haml
+++ b/app/views/shared/_gallery.html.haml
@@ -55,6 +55,15 @@
         = link_to 'Intermediate', 'javascript:void(0);'
       %li(ng-click="filters.difficulty = 'advanced'")
         = link_to 'Advanced', 'javascript:void(0);'
+  -if admin_user_signed_in?
+    .dropdown
+      .dropdown-toggle
+        {{filters.published || 'Publish Status'}}
+        %i.icon-angle-down
+      %ul.dropdown-menu(ng-init="publishedChoices=['All', 'Published', 'Unpublished']")
+        %li(ng-repeat="choice in publishedChoices")
+          %a(ng-click="filters.published_status = choice")
+            {{choice}}
   .dropdown
     %div(ng-show="filters.difficulty || filters.by_published_at" ng-click="filters.clear = 'true'")
       = link_to 'Clear x', 'javascript:void(0);'
