--- a/app/views/courses/_poutine_a.html.haml
+++ b/app/views/courses/_poutine_a.html.haml
@@ -12,7 +12,7 @@
       %h4.text-center
         %i.icon-comment-alt
         Comments or Questions?
-        = link_to 'Visit the Forum', 'http://forum.chefsteps.com'
+        = link_to 'Visit the Forum', @course.forum_link
      
     .span6
       .well
