[poutine] fix typo

--- a/app/views/courses/_poutine_a.html.haml
+++ b/app/views/courses/_poutine_a.html.haml
@@ -71,7 +71,7 @@
       %p In this short course, you'll learn how to use salt water to find the perfect potatoes for incredibly crisp French fries prepared via a three-stage cooking technique.       
       %p Squeaky cheese curds are a cult-food favorite, and their elusive squeak makes or breaks a classic poutine. We'll help you master the art of getting the squeak into these nuggets of fresh curd using an unstirred sous vide water bath and the cheddaring process.
     .span6
-      %p Finally, for those who are interested in a modernist approach to melting cheese, this course reveals the secret of creating a smooth-flowing molten cheddar cheese sauce. This is invaluable knowledge for those interested in creating the ultimate cheese slice for summertime grilling or mac & and cheese and rich, silky-smooth fondue when the weather turns cold. 
+      %p Finally, for those who are interested in a modernist approach to melting cheese, this course reveals the secret of creating a smooth-flowing molten cheddar cheese sauce. This is invaluable knowledge for those interested in creating the ultimate cheese sauce for summertime grilling or mac & and cheese and rich, silky-smooth fondue when the weather turns cold. 
       %p At the end of this course, you'll have the opportunity to demonstrate proficiency with the techniques, and also certify your understanding of the science behind poutine. 
 
     .span5.offset1.section
