[poutine] fix the homepage image for the course

--- a/app/views/home/_index_B.html.haml
+++ b/app/views/home/_index_B.html.haml
@@ -11,7 +11,7 @@
     - if @courses.any?
       - @courses.each do |course|
         .span4.offset1
-          = render 'shared/media_box_2', url: course_path(course), title: course.title, image: course.first_published_activity.featured_image, object: course
+          = render 'shared/media_box_2', url: course_path(course), title: course.title, image: course.featured_image, object: course
       .span12.text-center
         %p.lead 
           %br
